[tool.poetry]
name = "nameko"
version = "3.0.0"
description = "A microservices framework for Python that lets service developers concentrate on application logic and encourages testability."
authors = []

[tool.poetry.dependencies]
python = "^3.10"
kombu = "^5.2.4"
eventlet = "^0.33.1"
mock = "^4.0.3"
click = "^8.1.3"
"path.py" = "^12.5.0"
PyYAML = "^6.0"
requests = "^2.28.1"
six = "^1.16.0"
Werkzeug = "2.1.2"
wrapt = "^1.14.1"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.15.3"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
urllib3 = "^1.26.12"
pyenchant = "^3.2.2"
Sphinx = "^5.2.3"
sphinxcontrib-spelling = "^7.6.0"
sphinx-nameko-theme = "^0.0.3"
docutils = "^0.19"
nameko-sqlalchemy = "^1.5.0"
boto3 = "^1.24.84"
PyJWT = "^2.5.0"
moto = "^4.0.6"
autopep8 = "^1.7.0"
websocket-client = "0.48.0"

[tool.poetry.scripts]
nameko = "nameko.cli:cli"

[tool.poetry.plugins."pytest11"]
pytest_nameko = "nameko.testing.pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
